docs(logistics): deepen dark-store service guides
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>